Fix: 글 작성자가 탈퇴한 경우 예외 처리